front/src/style/components/_track_table.scss
.track-table {
  > div {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 3.5rem;
  }
  .content {
    flex-grow: 1;
  }
  .row:not(.mobile) {
    border-bottom: 1px solid var(--border-color);
  }
}

.track-row,
.track-table.row {
  .ui.really.tiny.button.play-button {
    visibility: hidden;
  }
  .ui.icon.really.tiny.button.play-button.paused {
    color: var(--main-color);
    visibility: visible;
    display: contents;
    left: auto;
    right: auto;
  }
  .ui.floating.dropdown {
    visibility: hidden;
  }
  .ui.favorite-icon {
    visibility: hidden;
  }
  .ui.favorite-icon.pink {
    visibility: visible;
  }
  .actions {
    display: block;
    max-width: 2rem;
    width: 100%;
  }
  .actions.left.floated.column {
    width: 3% !important;
  }
  .meta.right.floated.column:not(.mobile) {
    width: 45px;
  }
  .content,
  .meta,
  .image {
    user-select: none;
  }
  .helper {
    display: inline-block;
    height: 100%;
    vertical-align: middle;
  }
  .ui.artist-track.mini.image {
    top: auto;
    bottom: 0;
    position: absolute;
    margin: auto;
  }

  .image.left.floated.column {
    width: 51px;
  }
}

.track-row {
  &.active {
    background: rgba(155, 155, 155, 0.2);
  }
  &:hover:not(.mobile) {
    background: rgba(155, 155, 155, 0.1);
  }
}

.track-table.mobile,
.track-row.mobile {
  height: 75px;
  align-items: center;
  display: flex;

  > div {
    margin-right: 0.25em;
  }

  .modal-button,
  .meta {
    display: flex !important;
    justify-content: center;
    flex-direction: column;
    text-align: right;
    margin: 10% 0;
    width: 10vw !important;
  }
  .meta.with-art {
    align-items: right;
  }
  .modal-button.with-art {
    align-items: center;
  }
  .actions div {
    height: 75px;
    line-height: 75px;
    width: 10vw;
  }
  .ui.favorite-icon.button {
    pointer-events: none;
  }
  .ui.artist-track.mini.image {
    width: 45px;
  }
  .track-title.mobile {
    font-weight: bold;
    margin-bottom: 0.1em;
  }
  .track-title.mobile.play-indicator {
    color: var(--vibrant-color);
  }
  .image.left.floated.column {
    width: 61px;
  }
}

.track-row:hover:not(.mobile) {
  cursor: pointer;

  // explicitly style the button as if it was hovered itself

  .ui.icon.really.tiny.button.play-button {
    color: var(--main-color);
    visibility: visible;
    display: contents;
    left: auto;
    right: auto;
  }
  .ui.floating.dropdown {
    visibility: visible;
  }
  .ui.favorite-icon {
    visibility: visible;
  }
}

.track-row,
.track-table {
  border-radius: 5px;
  padding: 0.5em;
  > div:not(.mobile) {
    padding: 0.25em;
    margin-right: 0.25em;
  }
  .favorite-icon.tiny.button {
    border: none !important;
    padding: 0 !important;
    margin: 0 0.5em;
    transition: all ease-in-out;
  }
  .mobile {
    -webkit-tap-highlight-color: transparent;
  }
}

.track-position {
  cursor: pointer;
  display: contents;
  min-height: 1em;
  outline: none;
  border: none;
  vertical-align: baseline;
  font-family: var(--font-family);
  margin: 0 0.25em 0 0;
  line-height: 1em;
  padding: 0.5rem;
  user-select: none;

  .mobile span {
    display: inline-block;
    vertical-align: middle;
    line-height: normal;
  }
}

.ui.overlay.fullscreen.modal {
  .track-modal-title,
  .track-modal-subtitle {
    margin: 0.1em;
  }
  .track-modal-subtitle {
    font-weight: normal;
  }
  .track-modal.list-icon {
    margin-right: 1em;
  }
  .track-modal.list-item {
    font-weight: bold;
    font-size: large;
  }
}

.scrolling.dimmable.dimmed {
  > .dimmer {
    overflow: auto;
    --webkit-overflow-scrolling: touch;
  }
  ::-webkit-scrollbar {
    width: 0px;
    background: transparent;
  }
}

.track-table.podcast.row,
.track-row.podcast.row {
  height: 20vh;
  align-items: center;
  display: flex;
  .ui.artist-track.mini.image {
    height: 15vh;
    width: auto;
    top: auto;
    bottom: auto;
  }
  .image.left.floated.column {
    width: (15vh);
    display: flex !important;
    justify-content: center;
    flex-direction: column;
  }
  .content.left.floated.column {
    margin-left: 26px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;  
    overflow: hidden;

    .podcast-episode-title {
      font-weight: bold;
      font-size: medium;
      display: block;
      margin-block-start: 1em;
      margin-block-end: 1em;
      margin-inline-start: 0px;
      margin-inline-end: 0px;
    }
  }
}

